Text-align the headers on the media panel to the left to avoid confusion
Thanks to Tsyesika for pointing this out!

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -559,6 +559,7 @@ table.media_panel {
 table.media_panel th {
   font-weight: bold;
   padding-bottom: 4px;
+  text-align: left;
 }
 
 
